<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="true"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageViewEditPhoto"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/edit_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bbb" />


        <ImageView
            android:id="@+id/imgPersonIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/firstname"
            android:cropToPadding="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewEditPhoto"
            app:srcCompat="@drawable/ic_person_ash" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutFirstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:boxBackgroundMode="outline"
            app:layout_constraintBottom_toBottomOf="@+id/imgPersonIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgPersonIcon"
            app:layout_constraintTop_toTopOf="@+id/imgPersonIcon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEditFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/firstname"
                android:inputType="textPersonName"
                android:selectAllOnFocus="true"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutLastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:boxBackgroundMode="outline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgPersonIcon"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutFirstName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEditLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/imgEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/profile_email"
            app:layout_constraintStart_toStartOf="@+id/imgPersonIcon"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutLastName"
            app:srcCompat="@drawable/ic_email_ash" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:boxBackgroundMode="outline"
            app:layout_constraintBottom_toBottomOf="@+id/imgEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgEmail"
            app:layout_constraintTop_toTopOf="@+id/imgEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/imgPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/phone_number"
            app:layout_constraintStart_toStartOf="@+id/imgEmail"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail"
            app:srcCompat="@drawable/ic_phone_ash" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:boxBackgroundMode="outline"
            app:layout_constraintBottom_toBottomOf="@+id/imgPhoneNumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ccp"
            app:layout_constraintTop_toTopOf="@+id/imgPhoneNumber">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEditPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile_number"
                android:inputType="phone"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:ccpDialog_showFlag="true"
            app:ccpDialog_showNameCode="true"
            app:ccp_areaCodeDetectedCountry="false"
            app:ccp_autoDetectCountry="false"
            app:ccp_autoFormatNumber="false"
            app:ccp_defaultNameCode="GH"
            app:ccp_showFlag="false"
            app:ccp_showNameCode="true"
            app:ccp_showPhoneCode="true"
            app:ccp_textGravity="LEFT"
            app:layout_constraintBottom_toBottomOf="@+id/imgPhoneNumber"
            app:layout_constraintStart_toEndOf="@+id/imgPhoneNumber"
            app:layout_constraintTop_toTopOf="@+id/imgPhoneNumber" />

        <ImageView
            android:id="@+id/imgLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPhone"
            app:srcCompat="@drawable/ic_location_ash" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutLocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="24dp"
            app:boxBackgroundMode="outline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgLocation"
            app:layout_constraintTop_toTopOf="@+id/imgLocation">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEditLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location"
                android:inputType="text"
                android:selectAllOnFocus="true"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
